--- a/css/style.scss
+++ b/css/style.scss
@@ -5,25 +5,81 @@
 "base",
 "layout",
 "syntax-highlighting"*/
-.zcarousel {
-    @media(min-width: 1090px) {
-        width: 1000px;
-        margin: 100px auto;
+body {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 18px;
+}
 
+$maincolor: #326cff;
+
+.container.mainpage {
+    margin-top: 0;
+    margin-bottom: auto;
+    max-width: unset;
+}
+
+@media (min-width: 768px) {
+    .container.mainpage {
+        width: 760px;
+    }
+}
+
+@media (min-width: 1110px) {
+    .container.mainpage {
+        width: 1110px;
+    }
+}
+
+.namelogo {
+    text-align: center;
+    width: 100%;
+    font-family: 'Bahiana', cursive;
+    font-size: 100px;
+    margin-top: 50px;
+    color: $maincolor;
+}
+
+footer {
+    margin-bottom: 0;
+}
+
+.zcarousel {
+    margin: 50px auto !important;
+    width: 100%;
+}
+
+.topborder {
+    border-top: dotted $maincolor;
+    border-image: url(/img/border.png) 20 round;
+    border-width: 5px;
+}
+
+.bottomborder {
+    border-bottom: dotted $maincolor;
+    border-image: url(/img/border.png) 20 round;
+    border-width: 5px;
+}
+
+@media(min-width: 768px) {
+    .zcarousel {
         .slick-slide {
             margin: 0px 20px;
+        }
+
+        .page .title {
+            font-size: 24px;
         }
     }
+}
 
-    @media(max-width: 1089px) {
-        width: 100%;
-
+@media(max-width: 767px) {
+    .zcarousel {
         .slick-slide {
             margin: 0px 20px;
         }
 
-        .header h2 {
-            font-size: 330%;
+        .page .title {
+            font-size: 32px;
         }
     }
 }
@@ -32,20 +88,34 @@
     height: 100px;
     width: 100%;
     object-fit: cover;
+    margin-bottom: 10px;
 }
 
-.zcarousel .header {
+.zcarousel .page {
     position: relative;
+    margin-bottom: 20px;
+
+    .title {
+        position: absolute;
+        left: 0;
+        top: 0;
+        text-align: center;
+        line-height: 100px;
+        width: 100%;
+        font-weight: bold;
+        color: $maincolor;
+    }
+
+    p {
+        padding: 2px;
+    }
+
+    .link {
+        color: $maincolor;
+    }
 }
 
-.zcarousel .header h2 {
-    position: absolute;
-    left: 0;
-    top: 0;
-    text-align: center;
-    line-height: 100px;
-    width: 100%;
-}
+
 
 .slick-prev:before,
 .slick-next:before {
@@ -54,11 +124,11 @@
 
 .slick-slide {
     transition: all ease-in-out .3s;
-    opacity: .2;
+    opacity: 1;
 }
 
 .slick-active {
-    opacity: .5;
+    opacity: 1;
 }
 
 .slick-current {
@@ -66,109 +136,8 @@
 }
 
 
-
+/*
 .navbar {
     font-weight: 500;
 }
-
-#features {
-    @media(min-width: 768px) {
-        margin: auto;
-
-        .carousel-item-data {
-            height: 600px;
-            background-position: 50% 50%;
-            background-size: cover;
-        }
-
-        .carousel-caption h1 {
-            text-align: right;
-            font-size: 80px;
-        }
-
-        .carousel-caption h2 {
-            text-align: right;
-            font-size: 26px;
-            margin-bottom: 0px;
-        }
-
-        .carousel-caption .excerpt {
-            text-align: right;
-            position: absolute;
-            right: 0;
-            top: 30%;
-            font-size: 30px;
-            max-width: 80%;
-            background: linear-gradient(to right, rgba(0,0,0, 0), rgba(0,0,0, 0.4) 20%, rgba(0,0,0, 0.4) 90%, rgba(0,0,0, 0) 100%);
-            padding: 10px;
-            padding-right: 30px;
-        }
-
-        .carousel-caption a {
-            text-shadow: none;
-        }
-    }
-
-    @media(max-width: 767px) {
-        .carousel-item-data {
-            height: 530px;
-        }
-
-        .carousel-caption h1 {
-            text-align: center;
-            position: relative;
-            font-size: 30px;
-        }
-    }
-
-    .carousel-item-data {
-        background-position: 50% 50%;
-        background-size: cover;
-        color: #f8f8f8;
-    }
-
-    .carousel-item:not(.active) .carousel-caption {
-        opacity: 0;
-        transition: opacity 0.8s;
-    }
-
-    .carousel-item.active .carousel-caption {
-        opacity: 1;
-        transition: opacity 0.8s;
-    }
-
-    .carousel-caption {
-        text-shadow: 1.5px 1.5px 2px #333;
-        /*position: relative;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        padding: 0;*/
-        height: 100%;
-        text-align: right;
-    }
-
-    .carousel-caption h1 {
-        text-shadow: 1.5px 1.5px 1px #333;
-    }
-    /*.carousel-caption {
-        order: 1;
-        flex-grow: 200;
-        min-height: 50px;
-        
-        background: #aaa;
-        
-        position: relative;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        text-align: right;
-        padding: 10px;
-        color: #222;
-    }
-
-
-    .carousel-caption h2 {
-        font-style: italic;
-    }*/
-}
+*/
