--- a/css/style.scss
+++ b/css/style.scss
@@ -48,16 +48,23 @@ footer {
     width: 100%;
 }
 
+.borderimage {
+    -webkit-border-image: url(/img/border2.png) 5 round;
+    border-image: url(/img/border2.png) 5 round;
+}
+
 .topborder {
-    border-top: dotted $maincolor;
-    border-image: url(/img/border.png) 20 round;
-    border-width: 5px;
+    border-top-style: dotted;
+    border-top-width: 5px;
+    border-top-color: $maincolor;
+    @extend .borderimage;
 }
 
 .bottomborder {
-    border-bottom: dotted $maincolor;
-    border-image: url(/img/border.png) 20 round;
-    border-width: 5px;
+    border-bottom-style: dotted;
+    border-bottom-width: 5px;
+    border-bottom-color: $maincolor;
+    @extend .borderimage;
 }
 
 @media(min-width: 768px) {
