Another attempt at a mobile border fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -49,8 +49,8 @@ footer {
 }
 
 .borderimage {
-    -webkit-border-image: url(/img/border2.png) 5 round;
-    border-image: url(/img/border2.png) 5 round;
+    -webkit-border-image: url(/img/border2.png) 5 space;
+    border-image: url(/img/border2.png) 5 space;
 }
 
 .topborder {
