--- a/css/style.scss
+++ b/css/style.scss
@@ -57,14 +57,14 @@ footer {
     border-top-style: dotted;
     border-top-width: 5px;
     border-top-color: $maincolor;
-    @extend .borderimage;
+    /*@extend .borderimage;*/
 }
 
 .bottomborder {
     border-bottom-style: dotted;
     border-bottom-width: 5px;
     border-bottom-color: $maincolor;
-    @extend .borderimage;
+    /*@extend .borderimage;*/
 }
 
 .nosideborder {
