--- a/css/style.scss
+++ b/css/style.scss
@@ -54,17 +54,17 @@ footer {
 }
 
 .topborder {
+    @extend .borderimage;
     border-top-style: dotted;
     border-top-width: 5px;
     border-top-color: $maincolor;
-    /*@extend .borderimage;*/
 }
 
 .bottomborder {
+    @extend .borderimage;
     border-bottom-style: dotted;
     border-bottom-width: 5px;
     border-bottom-color: $maincolor;
-    /*@extend .borderimage;*/
 }
 
 .nosideborder {
