--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,9 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-{% include head.html %}
+﻿---
+layout: empty
+---
+<head>
+    {% include head.html %}
+</head>
 <body>
     {% include header.html %}
     
@@ -8,4 +11,3 @@
 
     {% include footer.html %}
 </body>
-</html>
