--- a/css/main.scss
+++ b/css/main.scss
@@ -1,14 +1,12 @@
 ---
 # Front matter comment to ensure Jekyll properly reads file.
 ---
-/*@import
-"base",
-"layout",
-"syntax-highlighting"*/
+
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 18px;
     height: 100%;
+    background-color: #f5f5f5;
 }
 
 footer {
@@ -176,4 +174,57 @@ $maincolor: #326cff;
 
 .slick-current {
     opacity: 1;
+}
+
+$project-item-width: 200px;
+$project-item-height: 300px;
+
+.project-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
+    margin: 30px;
+}
+
+.project-item {
+    flex-grow: 1;
+    height: $project-item-height;
+    width: $project-item-width;
+    display: block;
+    margin: 10px;
+    padding: 10px;
+    border: 2px solid $maincolor;
+    min-width: $project-item-width;
+}
+
+.project-img {
+    width: 100%;
+    border: 4px solid $maincolor;
+}
+
+.project-title {
+    display: flex;
+    align-items: center;
+    margin: 5px 0;
+
+    img {
+        height: 25px;
+    }
+
+    h5 {
+        line-height: 30px;
+        font-size: 20px;
+        margin-bottom: 0;
+        margin-left: 5px;
+    }
+}
+
+.project-source-btn, .project-link-btn {
+    width: 100%;
+    text-align: left;
+    border-radius: 0;
+    padding: 4px 9px;
+    margin: 5px 0;
 }
