--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light">
-    <a class="navbar-brand" href="/">{{ site.title }}</a>
+    <a class="navbar-brand" href="/">{{ page.title }}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
             {% for item in site.data.navigation %}
-            <li class="nav-item{% if page.url == item.link %} active{% endif %}">
+            <li class="nav-item{% for link in item.links %}{% if page.url contains link %} active{% break %}{% endif %}{% endfor %}">
                 <a class="nav-link" href="{{ item.link }}">{{ item.name }}</a>
             </li>
             {% endfor %}
